<resources>
    <string name="app_name">MarceloPoblete</string>
    <string name="usuario">Usuario</string>
    <string name="logo">Logo</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="clave">Clave</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="estatura">Estatura</string>
    <string name="guardar">Guardar</string>
    <string name="titulo_registro_de_usuario">Registro de Usuario</string>
    <string name="peso">Peso</string>
    <string name="Titulo_registro_de_evaluaciones">Registro de Evaluaciones</string>
    <string name="registra_ev">registrar Evaluación</string>
    <string name="fecha_evaluacion">Fecha Evaluacion</string>
    <string name="titulo_registro_de_evaluaciones">Registro de Evaluaciones</string>
    <string name="Titulo_eliminar_evaluaciones">Eliminar Evaluaciones</string>
    <string name="consultar_evaluacion">Consultar Evaluación</string>
    <string name="eliminar_evaluaci_n">Eliminar Evaluación</string>
    <string name="titulo_consultar_evaluaciones">Consultar Evaluación\n por Fecha</string>
    <string name="consultar_evaluaci_n">Consultar Evaluación</string>
    <string name="fecha_desde">Desde</string>
    <string name="fecha_hasta">Hasta</string>
    <string name="fecha_de_consulta">Fecha de Consulta</string>
    <string name="menu">Menú</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="registrar_evaluacion">Registrar Evaluación</string>
    <string name="eliminar_evaluacion">Eliminar Evaluación</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="altura">Altura</string>
    <string name="todo">logo</string>
    <string name="buscar_evaluaci_n">buscar evaluación</string>
    <string name="txt_btn_consultar_evaluaci_n">consultar evaluación</string>
</resources>
